# traffic-service-server

./: .gitignore  .gitmodules  .travis.yml  .ycm_extra_conf.py  CMakeLists.txt  README.md
backend/: CMakeLists.txt  backend.h  dummy.cpp  dummy.h  mysql.cpp  mysql.h  sqlite.cpp  sqlite.h
messages/: CMakeLists.txt  common_message.cpp  common_message.h  message_context.cpp  message_context.h  reply.cpp  reply.h  reply_message.cpp  reply_message.h  request_message.cpp  request_message.h
server/: CMakeLists.txt  commandline.cpp  commandline.h  main.cpp  profile.cpp  profile.h  session_context.cpp  session_context.h  traffic_server.cpp  traffic_server.h  worker.cpp  worker.h
test/: CMakeLists.txt  messages_reply_message.cpp  messages_request_message.cpp  server_commandline.cpp  server_traffic_server.cpp  server_worker.cpp
test/example_db/: fill_data.py
test/example_db/mysql/: schema.sql
test/example_db/sqlite/: schema.sql
